# ShikaBOM

./: Cargo.toml  README.md  compose.yaml  package-lock.json  package.json
.fleet/: run.json
src/: app.rs  logging.rs  main.rs  parts.rs  parts_ui.rs  parts_view.rs  project_view.rs  projects.rs  projects_ui.rs  projects_view.rs  stock.rs  stock_ui.rs  stock_view.rs  ui.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  parts.rs  storage.rs
src/lib/: Greet.svelte  ModifyPartModal.svelte  NewPartModal.svelte  Part.svelte  PartTable.svelte
src/lib/Parts/: ModifyPartModal.svelte  NewPartModal.svelte  PartTable.svelte  PartView.svelte
src/lib/Storage/: ModifyQtyModal.svelte  StorageTable.svelte  StorageView.svelte
src/routes/: +page.svelte
