[package]
name = "ratatui-working-bom"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0" , features = ["unstable-rendered-line-info"]}
unicode-width = "0.1.12"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
postgres = "0.19.7"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
lazy_static = "1.4.0"
tracing = "0.1.40"